# crud-traits

./: Cargo.toml
.github/: dependabot.yml
.github/workflows/: main.yml
crud-traits/: Cargo.toml
crud-traits-macros/: Cargo.toml
crud-traits-macros/src/: lib.rs
crud-traits/examples/: README.md  demo.rs  docker-compose.yml
crud-traits/examples/migrations/: 1_setup.sql
crud-traits/src/: as_id.rs  belongs_to.rs  create.rs  delete.rs  has_many.rs  has_many_and_belongs_to.rs  has_many_through.rs  has_one.rs  into_id.rs  lib.rs  mapped.rs  mapped_model.rs  meta.rs  read.rs  update.rs
src/: create.rs  delete.rs  has_many.rs  has_one.rs  has_parents_with_many_children.rs  has_parents_with_one_child.rs  id.rs  lib.rs  read.rs  update.rs
